# serializer version: 1
# name: test_all_entities[binary_sensor.ampio_47846_obj_146-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ampio_47846_obj_146',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Przycisk kino',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_146',
    'supported_features': 0,
    'translation_key': 'input',
    'unique_id': '47846_obj_146',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_47846_obj_146-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon Przycisk kino',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_47846_obj_146',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[binary_sensor.ampio_47846_obj_62-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ampio_47846_obj_62',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Motion',
    'platform': 'ampio',
    'previous_unique_id': None,
    'suggested_object_id': 'ampio_47846_obj_62',
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '47846_obj_62',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[binary_sensor.ampio_47846_obj_62-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'motion',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'm-sens salon Motion',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ampio_47846_obj_62',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
